fixed AuthenticationController.mjs
